bug-030565 removed align-items-center

--- a/application/views/css/seller.css
+++ b/application/views/css/seller.css
@@ -25,9 +25,9 @@
 	-webkit-box-pack: end;
 	-ms-flex-pack: end;
 	justify-content: flex-end;
-	-webkit-box-align: center;
+/*	-webkit-box-align: center;
 	-ms-flex-align: center;
-	align-items: center;
+	align-items: center;*/
 }
 
 .seller-login .field-set {
